fix una spacing

--- a/blocks/columns/default.css
+++ b/blocks/columns/default.css
@@ -418,6 +418,26 @@ main .section.columns-container .block.columns.columns-2-cols.icon-list > div > 
   vertical-align: -0.1em;
 }
 
+main .section.columns-container.close-vertical {
+
+  & > .columns-wrapper {
+    margin-top: unset;
+    margin-bottom: .5rem;
+
+    & > .block.columns {
+      margin: 0;
+    }
+  }
+
+  & > div:not(div:first-of-type).default-content-wrapper {
+    margin-top: unset;
+  }
+
+  & > div:not(div:first-of-type):not(div:last-of-type).default-content-wrapper {
+    margin-bottom: 1.5rem;
+  }
+}
+
 
 @media (min-width: 992px /* breakpoint-l */) {
   .columns.block:not(.wrap-mobile) > div {
